chore: disabling Unit Tests

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -94,6 +94,7 @@ jobs:
     name: Unit tests
     needs: [ build ]
     runs-on: ubuntu-latest
+    if: ${{ false }}
 
     steps:
       - uses: actions/checkout@v3
