chore: setting range strategy to `pin`

--- a/renovate.json
+++ b/renovate.json
@@ -6,7 +6,7 @@
   "labels": [
     "Renovate Bot"
   ],
-  "rangeStrategy": "replace",
+  "rangeStrategy": "pin",
   "lockFileMaintenance": {
     "enabled": true
   },
