chore: disabling updates of the engines

--- a/renovate.json
+++ b/renovate.json
@@ -9,5 +9,13 @@
   "rangeStrategy": "pin",
   "lockFileMaintenance": {
     "enabled": true
-  }
+  },
+  "packageRules": [
+    {
+      "matchDepTypes": [
+        "engines"
+      ],
+      "enabled": false
+    }
+  ]
 }
