chore: setting `prHourlyLimit` to 30

--- a/renovate.json
+++ b/renovate.json
@@ -6,6 +6,7 @@
   "labels": [
     "Renovate Bot"
   ],
+  "prHourlyLimit": 30,
   "rangeStrategy": "pin",
   "lockFileMaintenance": {
     "enabled": true
