chore: setting rules for docker

--- a/renovate.json
+++ b/renovate.json
@@ -17,6 +17,16 @@
         "engines"
       ],
       "enabled": false
+    },
+    {
+      "enabled": false,
+      "matchDatasources": [
+        "docker"
+      ],
+      "pinDigests": true,
+      "matchUpdateTypes": [
+        "major"
+      ]
     }
   ]
 }
