--- a/backend-server/Dockerfile
+++ b/backend-server/Dockerfile
@@ -1,12 +1,13 @@
-FROM node:18.17.1-alpine@sha256:3482a20c97e401b56ac50ba8920cc7b5b2022bfc6aa7d4e4c231755770cf892f as dependencies
+FROM node:18.17.1-alpine@sha256:3482a20c97e401b56ac50ba8920cc7b5b2022bfc6aa7d4e4c231755770cf892f as base
 WORKDIR /app
+
+FROM base as dependencies
 
 COPY ["./package.json", "./yarn.lock", "./"]
 
 RUN yarn install
 
-FROM node:16-alpine as final
-WORKDIR /app
+FROM base as final
 
 COPY --from=dependencies /app/node_modules ./node_modules
 COPY . .
