chore: disabling for docker-compose

--- a/renovate.json
+++ b/renovate.json
@@ -32,6 +32,12 @@
       "matchUpdateTypes": [
         "major"
       ]
+    },
+    {
+      "managers": [
+        "docker-compose"
+      ],
+      "enabled": false
     }
   ]
 }
